--- a/style.css
+++ b/style.css
@@ -70,6 +70,51 @@ main {
   transform: rotateY(-180deg);
 }
 
+@keyframes erro {
+  10%,
+  90% {
+    transform: rotateY(-180deg) translateX(-1px);
+  }
+  20%,
+  80% {
+    transform: rotateY(-180deg) translateX(2px);
+  }
+  30%,
+  50%,
+  70% {
+    transform: rotateY(-180deg) translateX(-4px);
+  }
+  40%,
+  60% {
+    transform: rotateY(-180deg) translateX(4px);
+  }
+}
+
+@keyframes acerto {
+  from {
+    transform: rotateY(-180deg) scale3d(1, 1, 1);
+    opacity: 1;
+  }
+  
+  25% {
+    transform: rotateY(-180deg) scale3d(1.1, 1.1, 1.1);
+    opacity: 1;
+  }
+  
+  to {
+    transform: rotateY(-180deg) scale3d(1, 1, 1);
+    opacity: 0;
+  }
+}
+
 .acertaste {
-  opacity: 0;
+  pointer-events: none;
+}
+
+.acertaste .cartao_conteudo {
+  animation: acerto 1.3s ease-in-out forwards;
+}
+
+.erro {
+  animation: error 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
